--- a/package.json
+++ b/package.json
@@ -1,56 +1,46 @@
 {
   "name": "@kacker/ui",
-  "version": "1.2.8",
-  "main": "./dist/cjs",
-  "module": "./dist/esm",
-  "types": "./dist/cjs/index.d.ts",
-  "typings": "dist/esm/index.d.ts",
-  "license": "MIT",
-  "files": [
-    "/dist"
-  ],
+  "version": "0.1.0",
+  "private": true,
+  "type": "module",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs",
+      "default": "./dist/index.js"
+    },
+    "./*": {
+      "types": "./dist/*.d.ts",
+      "import": "./dist/*.js"
+    }
+  },
   "scripts": {
-    "prepack": "yarn build",
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "ver-sync": "node scripts/sync-versions.js"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.22.9",
-    "@rollup/plugin-babel": "^6.0.3",
-    "@rollup/plugin-commonjs": "^25.0.3",
-    "@rollup/plugin-node-resolve": "^15.1.0",
-    "@rollup/plugin-replace": "^5.0.2",
-    "@rollup/plugin-url": "^8.0.2",
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
-    "autoprefixer": "^10.4.14",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-preset-es2015": "^6.24.1",
-    "esbuild": "^0.19.0",
-    "ncp": "^2.0.0",
-    "postcss": "^8.4.27",
-    "postcss-obfuscator": "^1.6.0",
-    "rollup": "^2.77.5",
-    "rollup-plugin-delete": "^2.0.0",
-    "rollup-plugin-esbuild": "^5.0.0",
-    "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-typescript2": "^0.36.0",
-    "tailwindcss": "^3.3.3",
-    "typescript": "5.1.6"
-  },
-  "peerDependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "dev": "bunx concurrently \"bun run build --watch\" \"bun run build:types --watch\"",
+    "build": "bun build src/index.tsx --outdir dist --external react --external react-dom --external react/jsx-runtime --external react/jsx-dev-runtime",
+    "build:types": "tsc -p tsconfig.types.json"
   },
   "dependencies": {
-    "@aashu-dubey/capacitor-statusbar-safe-area": "^2.1.1",
-    "@babel/preset-react": "^7.22.5",
-    "@capacitor/core": "^5.5.1",
-    "@capacitor/status-bar": "^5.0.6",
-    "@hugotomazi/capacitor-navigation-bar": "^2.0.1",
-    "raviger": "^4.1.2",
-    "react": "^18.2.0",
-    "tailwind-merge": "^1.14.0"
+    "@aashu-dubey/capacitor-statusbar-safe-area": "^4.0.0",
+    "@hugotomazi/capacitor-navigation-bar": "^4.0.1",
+    "bun-plugin-tailwind": "^0.0.14",
+    "jotai": "^2.15.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.0.6"
+  },
+  "peerDependencies": {
+    "react": "^19",
+    "react-dom": "^19"
+  },
+  "devDependencies": {
+    "react": "^19",
+    "react-dom": "^19",
+    "@types/bun": "latest",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "prettier": "^3.6.2"
   }
 }
