--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,34 +1,16 @@
 {
-    "compilerOptions": {
-        "outDir": "dist/esm",
-        "module": "esnext",
-        "target": "es5",
-        "lib": [
-            "es6",
-            "dom",
-            "es2016",
-            "es2017"
-        ],
-        "jsx": "react-jsx",
-        "declaration": true,
-        "declarationMap": true,
-        "moduleResolution": "node",
-        "noUnusedLocals": true,
-        "noUnusedParameters": true,
-        "esModuleInterop": true,
-        "noImplicitReturns": true,
-        "noImplicitThis": true,
-        "noImplicitAny": true,
-        "strictNullChecks": true,
-        "suppressImplicitAnyIndexErrors": true,
-        "ignoreDeprecations": "5.0",
-        "allowSyntheticDefaultImports": true
-    },
-    "include": [
-        "src/**/*.ts*"
-    ],
-    "exclude": [
-        "node_modules",
-        "dist"
-    ]
+  "compilerOptions": {
+    "target": "ESNext",
+    "module": "ESNext",
+    "moduleResolution": "bundler",
+    "jsx": "react-jsx",
+    "allowJs": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
+  }
 }
