--- a/package.json
+++ b/package.json
@@ -19,19 +19,23 @@
     }
   },
   "scripts": {
-    "dev": "bunx concurrently \"bun run build --watch\" \"bun run build:types --watch\"",
-    "build": "bun build src/index.tsx --outdir dist --external react --external react-dom --external react/jsx-runtime --external react/jsx-dev-runtime",
-    "build:types": "tsc -p tsconfig.types.json"
+    "dev": "bunx concurrently \"bun run build:js --watch\" \"bun run build:types --watch\"",
+    "build:js": "bun build src/index.tsx --outdir dist --external react --external react-dom --external react/jsx-runtime --external react/jsx-dev-runtime",
+    "build:types": "tsc -p tsconfig.types.json",
+    "build": "bun run build:js && bun run build:types",
+    "ver-sync": "node scripts/sync-versions.js"
   },
   "dependencies": {
-    "@aashu-dubey/capacitor-statusbar-safe-area": "^4.0.0",
-    "@hugotomazi/capacitor-navigation-bar": "^4.0.1",
     "bun-plugin-tailwind": "^0.0.14",
     "jotai": "^2.15.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.0.6"
   },
   "peerDependencies": {
+    "@aashu-dubey/capacitor-statusbar-safe-area": "^4.0.0",
+    "@capacitor/app": "^7.1.0",
+    "@capacitor/status-bar": "^7.0.3",
+    "@hugotomazi/capacitor-navigation-bar": "^4.0.1",
     "react": "^19",
     "react-dom": "^19"
   },
